--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,8 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{yml,yaml}]
+[*.{yml,yaml,json,scss,html,js,vue,,blade.php}]
 indent_size = 2
+
+[*.php]
+indent_size = 4
