--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{yml,yaml,json,scss,html,js,vue,,blade.php}]
+[*.{yml,yaml,json,scss,html,js,vue,blade.php}]
 indent_size = 2
 
 [*.php]
